--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,47 @@
-body {
-  font-size: 64px;
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+header {
+  font-size: 2rem;
+  background-color: lightblue;
+  padding: 0.75rem;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr 6fr;
+}
+
+/*  Sidebar Navigation  */
+nav {
+  padding-left: 1rem;
+  padding-top: 0.5rem;
 }
