--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,11 @@ main {
   padding-top: 0.5rem;
 }
 
+.flex-col {
+  display: flex;
+  flex-direction: column;
+}
+
 /*  Sidebar Navigation  */
 nav {
   padding-left: 1rem;
@@ -79,6 +84,11 @@ nav {
 }
 
 /*  Todos List  */
+
+.todo-list {
+  gap: 2px;
+}
+
 /*  Todos List Item */
 .todo-top {
   display: flex;
