--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,7 @@ header {
 
 main {
   display: grid;
-  grid-template-columns: 1fr 6fr;
+  grid-template-columns: fit-content(20%) auto;
   column-gap: 1rem;
   padding-top: 0.5rem;
 }
@@ -60,6 +60,8 @@ nav {
 
 .nav-item {
   border: 1px black solid;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
 }
 
 .nav-project-item {
